# Event_schedular_agent

./: Dockerfile  README copy.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
backend/: Dockerfile  deploy.sh  main.py  requirements.txt  voice.py
backend/auth/: google_oauth.py
backend/routes/: auth.py  calendar.py  chat.py  transcribe.py
backend/services/: calendar_utils.py  llm_agent.py  whisper.py
backend/utils/: tts.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatBar.jsx  ChatMessage.jsx  Header.jsx  Recorder.jsx
frontend/src/pages/: Home.jsx  Login.jsx
