[project]
name = "smart-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "git-filter-repo>=2.47.0",
    "google-auth-oauthlib>=1.2.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
