[project]
name = "smart-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "elevenlabs>=2.7.1",
    "fastapi>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "git-filter-repo>=2.47.0",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.25.0",
    "langchain-core>=0.3.69",
    "openai>=1.96.1",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
